--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,15 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: #ffffff;
   font-family: "Poppins", serif !important;
+  line-height: 1.5;
 }
 
 h1,
@@ -9,4 +18,61 @@ h3,
 h4,
 h5 {
   font-weight: 600;
+}
+
+h1:hover a,
+h2:hover a,
+h3:hover a,
+h4:hover a,
+h5:hover a,
+h6:hover a {
+  text-decoration: underline !important;
+  color: #111111 !important;
+}
+
+h1 {
+  font-size: 32px;
+  line-height: 40px;
+  margin-bottom: 23px;
+}
+
+h2 {
+  font-size: 27px;
+  line-height: 38px;
+  margin-bottom: 20px;
+}
+
+h3 {
+  font-size: 22px;
+  line-height: 30px;
+  margin-bottom: 17px;
+}
+
+h4 {
+  font-size: 19px;
+  line-height: 29px;
+  margin-bottom: 14px;
+}
+
+h5 {
+  font-size: 17px;
+  line-height: 25px;
+  margin-bottom: 11px;
+}
+
+h6 {
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 11px;
+}
+
+p {
+  margin-bottom: 26px;
+  font-size: 15px;
+  line-height: 26px;
+}
+
+a {
+  color: #111111;
+  text-decoration: none !important;
 }
