--- a/src/components/common/Header/Header.css
+++ b/src/components/common/Header/Header.css
@@ -197,7 +197,8 @@ div.tab button:hover {
 }
 
 .header .navbar-nav .has-submenu.menu-large ul li {
-  background: url(../../assets/images/menubg.jpg) repeat-y center center #ffffff !important;
+  background: url(../../../assets/images/menubg.jpg) repeat-y center center
+    #ffffff !important;
 }
 
 .tab-details {
@@ -291,7 +292,7 @@ div.tab button:hover {
   position: absolute;
   height: 90px;
   display: block;
-  content: url(../../assets/images/hover.png);
+  content: url(../../../assets/images/hover.png);
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
