Blog Footer Added

--- a/src/components/common/ScrollToTop/ScrollToTop.css
+++ b/src/components/common/ScrollToTop/ScrollToTop.css
@@ -1,5 +1,5 @@
 .scroll-to-top {
-  background-color: #111111;
+  background-color: #ff6347;
   background-image: url(../../../assets/images/arrow.png);
   background-position: 50% 50%;
   background-repeat: no-repeat;
