--- a/src/index.css
+++ b/src/index.css
@@ -90,3 +90,20 @@ a {
   padding: 0 0.8rem;
   border-radius: 3px;
 }
+
+.btn {
+  border: 0 none;
+  border-radius: 0;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 0.8rem 2rem;
+  text-transform: none;
+  cursor: pointer;
+}
+.btn,
+.btn:hover,
+.btn:focus {
+  color: #ffffff !important;
+  background: rgba(0, 0, 0, 0)
+    linear-gradient(to right, #0091e5 0px, #00b7e5 100%) repeat scroll 0 0 !important;
+}
