Recent Posts Added on Home Page

--- a/src/components/common/Grid/MasonryGrid.css
+++ b/src/components/common/Grid/MasonryGrid.css
@@ -148,7 +148,7 @@
 .blog-meta small a,
 .blog-meta small {
   font-weight: 500;
-  color: #999 !important;
+  color: #999;
 }
 
 .masonry-box:hover .blog-meta span.bg-category {
