--- a/src/components/Layout/Sidebar.css
+++ b/src/components/Layout/Sidebar.css
@@ -12,6 +12,46 @@
   line-height: 1;
 }
 
+.sidebar .blog-list-widget img {
+  background: #fff none repeat scroll 0 0;
+  margin-right: 15px;
+  max-width: 80px;
+  width: 55px;
+  padding: 0;
+}
+
+.sidebar .blog-list-widget .list-group-item {
+  padding: 0;
+  border: 0;
+  margin: 0;
+  background-color: transparent;
+}
+
+.sidebar .blog-list-widget .w-100 {
+  margin-bottom: 1rem;
+  display: block;
+}
+
+.sidebar .blog-list-widget .w-100.last-item {
+  margin-bottom: 0;
+}
+
+.sidebar .blog-list-widget .mb-1 {
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 1.5;
+  margin-bottom: 0rem !important;
+  color: #111;
+}
+
+.sidebar .blog-list-widget small {
+  font-size: 10px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.6) !important;
+}
+
 @media (max-width: 991px) {
   .sidebar {
     margin: 1.5rem 0;
