--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@ body {
   background-color: #ffffff;
   font-family: "Poppins", serif !important;
   line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 h1,
